# master-slave

./: .env.example  .gitignore  00_init.sql  01_hba.sh  Dockerfile  README.md  docker-compose.yml  pyproject.toml
project/: app.py  config.py  database.py  heroes.py  models.py  utils.py
project/routes/: heroes.py
